--- a/index.html
+++ b/index.html
@@ -40,13 +40,15 @@
         </ol>
       </div>
     </section>
+
     <section>
       <h2>Behaviour</h2>
       <a href="https://en.wikipedia.org/wiki/Pangolin#Behavior" aria-label="Read more about Pangolin behaviour"></a>
     </section>
+
     <section>
       <h2>Conservation</h2>
-      <a href="https://en.wikipedia.org/wiki/Pangolin#Conservation" aria-label="Read more about Pagolin conservation"></a>
+      <a href="https://en.wikipedia.org/wiki/Pangolin#Conservation" aria-label="Read more about Pangolin conservation"></a>
     </section>
   </main>
   <footer role="contentinfo">
